# routes/order.routes.js
@@ -3,6 +3,6 @@ const router = express.Router();
 const orderController = require("../controllers/order.controller");
 
 router.post("/", orderController.createOrder);
-router.get("/:business_id", orderController.getOrders);
+router.get("/", orderController.getOrders);
 
 module.exports = router;
